# bellman-ford-cuda

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bf-serial.c  bf0-min.cu  bf0-mutex.cu  bf0-none.cu  compile.bat  compile.sh  graphgen.c  performance bf0.xlsx  performance bf1.xlsx  performance bf2.xlsx  performance serial.xlsx  test.bat  test.sh
doc/: tesi.bib  tesi.tex
src/: bf-serial.c  bf0-min.cu  bf0-mutex-aos-nosh.cu  bf0-mutex-aos-sh.cu  bf0-mutex-aos.cu  bf0-mutex-soa-nosh.cu  bf0-mutex-soa-sh.cu  bf0-mutex-soa.cu  bf0-mutex.cu  bf0-none-aos-nosh.cu  bf0-none-aos-sh.cu  bf0-none-aos.cu  bf0-none-soa-nosh.cu  bf0-none-soa-sh.cu  bf0-none-soa.cu  bf0-none.cu  bf1-aos-nosh.cu  bf1-aos-sh.cu  bf1-nosh.cu  bf1-sh.cu  bf1-soa-nosh.cu  bf1-soa-sh.cu  bf1.cu  bf2-aos-nosh.cu  bf2-aos-sh.cu  bf2-nosh.cu  bf2-sh.cu  bf2-soa-nosh.cu  bf2-soa-sh.cu  bf2.cu  graphgen.c  hpc.h  utils.h
test/: graph-025.sol  graph-050.sol  graph-075.sol  graph-100.sol  graph-DE.in  graph-DE.sol  graph-ME.sol  graph-NV.sol  graph-VT.sol  graph-rome.in  graph-rome.sol
